[package]
name = "rust_x3dh"
version = "0.1.1"
edition = "2021"
categories = ["cryptography"]
keywords = ["crypto", "cryptography", "x3dh"]
authors = ["Klaus Wong <wch.klaus@gmail.com>"]
description = "Embeded the xxxdh, which iplementation of the Extended Triple Diffie-Hellman key exchange protocol written in Rust, on Python. xxxdh is written by Olexander Yermakov."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rust_x3dh"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20.2", features = ["extension-module", "abi3-py38", "abi3-py37"] }
cryptimitives = "0.17.0"
cryptraits = "0.13.0"
rand_core = { version = "0.6.3" }
xxxdh = "0.7.4"

[profile.release]
codegen-units = 1
debug = false
incremental = false
lto = true
opt-level = 3

[profile.release.build-override]
opt-level = 0

