[build-system]
build-backend = "maturin"
requires = ["maturin>=1.0,<2.0"]

[project]
name = "rust_x3dh"
version = "0.1.0"
license = "MIT"
zip_safe = false
authors = [ { name="Klaus Wong", email="wch.klaus@gmail.com" },]
description = "Embeded the xxxdh, which iplementation of the Extended Triple Diffie-Hellman key exchange protocol written in Rust, on Python. xxxdh is written by Olexander Yermakov."
readme  = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[tool.maturin]
python-source = "python"
features = ["pyo3/extension-module"]

[project.urls]
Homepage = "https://github.com/hkk97/rust_x3dh"